<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/favorite"
        android:title="@string/favorite"
        android:icon = "@drawable/ic_baseline_favorite_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon = "@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom" />
</menu>